--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,9 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="mist">#90AFC5</color>
+    <color name="transMist">#8090AFC5</color>
     <color name="stone">#336B87</color>
+    <color name="pebble">#66AFD4</color>
     <color name="shadow">#2A3132</color>
     <color name="autumnFoliage">#763626</color>
 </resources>
