Created base activity to store common reusable functions. Connecting my project to Google Firebase. Signup and Login are connected to firebase. After signing up user is sent a email to verify their account. User can login when account is verified.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="pebble">#66AFD4</color>
     <color name="shadow">#2A3132</color>
     <color name="autumnFoliage">#763626</color>
+    <color name="red">#F72400</color>
 </resources>
