--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -181,7 +181,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/locationInput"
+                        android:id="@+id/myProfileLocationInput"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -196,9 +196,11 @@
                         app:layout_constraintTop_toBottomOf="@+id/phoneInput">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/locationEditInput"
+                            android:id="@+id/myProfileLocationEditInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:hint="Location"
                             android:inputType="text"
                             android:textColor="@color/darkAutumnFoliage" />
@@ -214,9 +216,9 @@
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/locationInput"
-                        app:layout_constraintStart_toStartOf="@+id/locationInput"
-                        app:layout_constraintTop_toBottomOf="@+id/locationInput" />
+                        app:layout_constraintEnd_toEndOf="@+id/myProfileLocationInput"
+                        app:layout_constraintStart_toStartOf="@+id/myProfileLocationInput"
+                        app:layout_constraintTop_toBottomOf="@+id/myProfileLocationInput" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/occupationInput"
