--- a/app/src/main/res/layout/activity_set_up.xml
+++ b/app/src/main/res/layout/activity_set_up.xml
@@ -134,7 +134,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/locationInput"
+                        android:id="@+id/setUpLocationInput"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -148,7 +148,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/phoneInput">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/locationEditInput"
+                            android:id="@+id/setUpLocationEditInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:focusable="false"
@@ -170,7 +170,7 @@
                         android:layout_marginTop="20dp"
                         app:layout_constraintEnd_toEndOf="@+id/phoneInput"
                         app:layout_constraintStart_toStartOf="@+id/phoneInput"
-                        app:layout_constraintTop_toBottomOf="@+id/locationInput" />
+                        app:layout_constraintTop_toBottomOf="@+id/setUpLocationInput" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/occupationInput"
