--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,11 @@
     <color name="lightMist">#C3E2F8</color>
     <color name="transMist">#8090AFC5</color>
     <color name="stone">#336B87</color>
+    <color name="lightStone">#80B8D4</color>
+    <color name="darkStone">#001F3B</color>
     <color name="pebble">#66AFD4</color>
+    <color name="lightPebble">#B3FCFF</color>
+    <color name="darkPebble">#1A6388</color>
     <color name="shadow">#2A3132</color>
     <color name="autumnFoliage">#763626</color>
     <color name="lightAutumnFoliage">#DC9C8C</color>
