Created functionality to create a board, assign information to the board, uplaod the board information to Google Firestore and all boards the user created is then populated in a recycler view on the main activity.

--- a/app/src/main/res/drawable-v24/shape_red_button_rounded.xml
+++ b/app/src/main/res/drawable-v24/shape_red_button_rounded.xml
@@ -16,7 +16,7 @@
         <gradient
             android:angle="360"
             android:startColor="@color/lightAutumnFoliage"
-            android:endColor="@color/darkAutumnFoliage"
+            android:endColor="@color/autumnFoliage"
             android:type="linear" />
         <stroke android:color="@color/grey" android:width="1dp" />
         <corners android:radius="10dp" />
