--- a/app/src/main/res/layout/single_task_item.xml
+++ b/app/src/main/res/layout/single_task_item.xml
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent">
 
                 <ImageButton
-                    android:id="@+id/closeListName"
+                    android:id="@+id/closeListNameButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackground"
@@ -66,7 +66,7 @@
                     android:inputType="text"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/confirmListName"
-                    app:layout_constraintStart_toEndOf="@+id/closeListName"
+                    app:layout_constraintStart_toEndOf="@+id/closeListNameButton"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageButton
@@ -265,7 +265,6 @@
                 android:text="Add Card"
                 android:textSize="18sp"
                 android:textColor="@color/black"
-                android:visibility="gone"
                 tools:visibility="visible" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
