Created the functionality to add members to a specific card and the ability to edit as well as delete a card within a task.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="darkPebble">#1A6388</color>
     <color name="shadow">#2A3132</color>
     <color name="autumnFoliage">#763626</color>
-    <color name="lightAutumnFoliage">#DC9C8C</color>
+    <color name="lightAutumnFoliage">#B68275</color>
     <color name="darkAutumnFoliage">#430300</color>
     <color name="red">#F72400</color>
 </resources>
