--- a/app/src/main/res/drawable/shape_blue_button_rounded.xml
+++ b/app/src/main/res/drawable/shape_blue_button_rounded.xml
@@ -14,9 +14,9 @@
         android:bottom="2dp">
         <shape android:shape="rectangle">
             <gradient
-                android:angle="360"
-                android:startColor="@color/mist"
-                android:endColor="@color/pebble"
+                android:angle="45"
+                android:startColor="@color/lightPebble"
+                android:endColor="@color/darkPebble"
                 android:type="linear" />
             <corners android:radius="10dp" />
             <stroke android:color="@color/grey" android:width="1dp" />
