--- a/app/src/main/res/layout/activity_members.xml
+++ b/app/src/main/res/layout/activity_members.xml
@@ -5,23 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background6"
-    tools:context=".activities.TaskListActivity">
+    tools:context=".activities.MembersActivity">
 
     <include
-        android:id="@+id/taskListToolbar"
+        android:id="@+id/membersToolbar"
         layout="@layout/main_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/taskListRecyclerView"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/membersCardView"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="5dp"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskListToolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/membersToolbar" >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/memberListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
