Added a third party color palette picker for the user to decorate the card colors.

--- a/app/src/main/res/layout/activity_card_details.xml
+++ b/app/src/main/res/layout/activity_card_details.xml
@@ -84,11 +84,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/box_border"
-                android:hint="Select Color"
+                android:text="Select Color"
                 android:layout_marginTop="5dp"
                 android:padding="10dp"
                 android:textColor="@color/darkAutumnFoliage"
-                android:textColorHint="@color/darkAutumnFoliage"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/labelColorTitle"
                 app:layout_constraintStart_toStartOf="@+id/labelColorTitle"
