--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,16 @@
     <style name="CustomNoActionBarTheme" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:statusBarColor">@color/shadow</item>
     </style>
+
+    <style name="CustomColorPicker" parent="ColorPicker">
+        <item name="cp_backgroundColor">#66AFD4</item>
+        <item name="cp_showOpacityBar">false</item>
+        <item name="cp_showHexaDecimalValue">true</item>
+        <item name="cp_showColorComponentsInfo">true</item>
+        <item name="cp_hexaDecimalTextColor">#000046</item>
+        <item name="cp_colorComponentsTextColor">#fff</item>
+        <item name="cp_positiveActionTextColor">@color/colorAccent</item>
+        <item name="cp_negativeActionTextColor">@color/colorPrimaryDark</item>
+        <item name="cp_sliderThumbColor">#accc</item>
+    </style>
 </resources>
