--- a/app/src/main/res/layout/activity_card_details.xml
+++ b/app/src/main/res/layout/activity_card_details.xml
@@ -120,6 +120,19 @@
                 app:layout_constraintStart_toStartOf="@+id/membersTitle"
                 app:layout_constraintTop_toBottomOf="@+id/membersTitle" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/selectedMembersListRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/selectMembersButton"
+                tools:visibility="visible" />
+
             <TextView
                 android:id="@+id/dueDateTitle"
                 android:layout_width="0dp"
@@ -130,7 +143,7 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/selectMembersButton" />
+                app:layout_constraintTop_toBottomOf="@+id/selectedMembersListRecyclerView" />
 
             <TextView
                 android:id="@+id/selectDueDateButton"
