--- a/app/src/main/res/layout/activity_members.xml
+++ b/app/src/main/res/layout/activity_members.xml
@@ -17,10 +17,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/membersCardView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
         app:cardCornerRadius="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/membersToolbar" >
