--- a/app/src/main/res/layout/single_card_item.xml
+++ b/app/src/main/res/layout/single_card_item.xml
@@ -16,9 +16,8 @@
         <View
             android:id="@+id/cardListDivider"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="20dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/cardName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,24 +33,38 @@
             android:text="Card"
             android:textColor="@color/black"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/cardListDivider" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cardSelectedMembersListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardName"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/cardMembersNames"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:hint="Member Names: "
             android:padding="10dp"
             android:textColorHint="@color/black"
-            android:textSize="20sp"
+            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:textStyle="italic"
             android:visibility="gone"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardName"
+            app:layout_constraintTop_toBottomOf="@+id/cardSelectedMembersListRecyclerView"
             tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
