Cleaned up the UI in multiples activities, fixed some remaining bugs, and constructed the forgot password activity.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background4"
     tools:context=".activities.ForgotPasswordActivity">
+
+    <ImageView
+        android:id="@+id/forgotPasswordImage"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="175dp"
+        android:src="@drawable/security"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/forgotPasswordEmailInput"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="45dp"
+        android:textColorHint="@color/lightAutumnFoliage"
+        app:hintTextColor="@color/lightAutumnFoliage"
+        app:boxStrokeColor="@color/lightAutumnFoliage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordImage"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/forgotPasswordEmailEditInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="Enter Email"
+            android:textColor="@color/lightAutumnFoliage" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/forgotPasswordButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shape_red_button_rounded"
+        android:text="Send"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordEmailInput"
+        app:layout_constraintStart_toStartOf="@+id/forgotPasswordEmailInput"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmailInput" />
+
+    <TextView
+        android:id="@+id/backToLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Back to Login?"
+        android:textColor="@color/lightAutumnFoliage"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordButton"
+        app:layout_constraintStart_toStartOf="@+id/forgotPasswordButton"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
