--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,6 @@
     <color name="lightAutumnFoliage">#B68275</color>
     <color name="darkAutumnFoliage">#430300</color>
     <color name="red">#F72400</color>
-    <color name="green">#00D100</color>
+    <color name="green">#00B100</color>
+
 </resources>
