--- a/app/src/main/res/layout/activity_create_board.xml
+++ b/app/src/main/res/layout/activity_create_board.xml
@@ -80,6 +80,23 @@
                 app:layout_constraintEnd_toEndOf="@+id/boardNameInput"
                 app:layout_constraintStart_toStartOf="@+id/boardNameInput"
                 app:layout_constraintTop_toBottomOf="@+id/boardNameInput" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/editBoardButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/shape_red_button_rounded"
+                android:text="Edit"
+                android:visibility="gone"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/boardNameInput"
+                app:layout_constraintStart_toStartOf="@+id/boardNameInput"
+                app:layout_constraintTop_toBottomOf="@+id/boardNameInput" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
