--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -19,5 +19,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyATIXPfEaeEa8FTKk9Soh-SBRo-ELpCKPE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Input your Google Maps key here</string>
 </resources>
